fix gap to be 16px, not 32px (#11415)

--- a/services/QuillLMS/app/assets/stylesheets/pages/premium_hub/overview.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/premium_hub/overview.scss
@@ -50,7 +50,7 @@
   .integrations, .premium-reports, .account-management {
     .overview-section-content {
       display: grid;
-      gap: 32px;
+      gap: 16px;
       grid-template-columns: repeat(3, 1fr);
     }
   }
